Corrected jv-stream